small inventory styling, made header a back button, fixed vaultboy stretching on add item pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,39 @@
     font-display: swap;
 }
 
+.banner {
+    position: relative;
+}  
 
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #e6b71f;
+}
+
+.banner-text {
+    color: white;
+    font-size: 6vw;
+    position: absolute;
+    font-family: "Overseer";
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.banner:hover .overlay {
+    opacity: 1;
+}
 
 .login, .logout {
     display: block;
@@ -107,6 +139,9 @@ html, body {
 @media only screen and (max-width: 600px) {
     .itemBtn{
         padding-top: 20px;
+    }
+    .banner-text {
+        font-size: 7vw;
     }
 
 }
